# win-remote-media-ctrl

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
src/: auth.rs  cmd.rs  ctrl.rs  error.rs  handler.rs  main.rs  media.rs  sys.rs
src/ctrl/sys/: win.rs
src/handler/: cmd.rs  media.rs  ws.rs
src/handler/ws/: auth.rs  crypto.rs  error.rs  loop.rs
src/sys/: win.rs
src/sys/win/: media.rs  qqmusic.rs  vkey.rs  volume.rs  winrt_control.rs
static/: index-v1.js  index-v2.js  index.html  rxjs.d.ts  styles.css
