[package]
name = "win-remote-media-ctrl"
version = "0.1.0"
edition = "2021"
authors = ["bdbai <bdbaiapp@163.com>"]
license = "WTFPL"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }
getrandom = "0.2"

axum = { version = "0.7", features = ["tracing"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
hyper = { version = "1.0", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = [
    "timeout",
    "fs",
    "set-header",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "rustls-tls-native-roots",
], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

hmac = "0.12"
sha2 = "0.10"
