[package]
name = "win-remote-media-ctrl"
version = "0.1.0"
edition = "2021"
authors = ["bdbai <bdbaiapp@163.com>"]
license = "WTFPL"

[dependencies]
rand = "0.8"

axum = { version = "0.8", features = ["tracing", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
bytes = "1"
hyper = { version = "1.6", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tungstenite = { version = "0.26", default-features = false }
tokio = { version = "1.44", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "timeout",
    "fs",
    "set-header",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.15", features = [
    "rustls-tls",
    "rustls-tls-native-roots",
], default-features = false }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22"

sha2 = "0.10"
aes-gcm = "0.10"
p256 = { version = "0.13", default-features = false, features = [
    "arithmetic",
    "std",
    "ecdh",
] }

#[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
    "Storage_Streams",
] }
windows-future = "0.2"
windows-core = "0.61"
futures = { version = "0.3.31", default-features = false }
